Code and pom clean up